# f1-digiflag

./: .gitignore  README.md  config.example.json  main.py  mpbridge.ignore  pyproject.toml
f1_unicorn/: __init__.py  color.py  config.py  game.py  globals.py  legacy.py  network_manager.py  render.py  udp.py  util.py
f1_unicorn/pages/: demo.py  main.py  menu.py
f1_unicorn/parser/: car.py  event.py  header.py  lap.py  participant.py  session.py
