[tool.poetry]
name = "f1-digisign"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "f1_digisign"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
poethepoet = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
line-length = 120

[tool.poe.tasks]
ruff = 'ruff .'
"ruff:fix" = 'ruff --fix .'
black = 'black --check .'
"black:fix" = "black ."

lint = ['ruff', 'black']
"lint:fix" = ["ruff:fix", "black:fix"]